chore: setup project and ignore large datasets

--- a/predictive_monitoring.ipynb
+++ b/predictive_monitoring.ipynb
@@ -1419,8 +1419,16 @@
    "source": [
     "## Prefix Extraction\n",
     "\n",
-    "First, we set a fixed prefix length and filter out any other  \n"
+    "First, we try to find out which traces contain the 'Send Fine' and 'Send for Credit Collection' activities.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d6c397",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
