--- a/predictive_monitoring.ipynb
+++ b/predictive_monitoring.ipynb
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "07d6c397",
    "metadata": {},
    "outputs": [],
@@ -1496,8 +1496,7 @@
     "        credit_collection_events = group[group[activity_col] == 'Send for Credit Collection']\n",
     "        \n",
     "        if len(credit_collection_events) == 0:\n",
-    "            # Case never reaches credit collection - skip it\n",
-    "            # (Or you could handle differently - see options below)\n",
+    "            # No credit collection event in this case\n",
     "            continue\n",
     "        \n",
     "        # Get the timestamp when credit collection occurs\n",
@@ -1509,9 +1508,9 @@
     "        # Time of last event in prefix\n",
     "        prefix_end_time = prefix.iloc[-1][timestamp_col]\n",
     "        \n",
-    "        # Check if credit collection happens AFTER the prefix\n",
+    "        # Check if credit collection happens after the prefix\n",
     "        if credit_collection_time <= prefix_end_time:\n",
-    "            # Credit collection already happened in the prefix - skip\n",
+    "            # Credit collection already happened in the prefix\n",
     "            continue\n",
     "        \n",
     "        # Calculate target: time from end of prefix to credit collection (in days)\n",
@@ -2165,8 +2164,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Scatter plot: Actual vs Predicted\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.scatter(y_test, y_pred, alpha=0.5)\n",
