add marginl scatter plot and prediction error across events for a specific case

--- a/predictive_monitoring.ipynb
+++ b/predictive_monitoring.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8212a703",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,8 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px"
    ]
   },
   {
@@ -46,14 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "6dd577aa",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samuelwidmer/Desktop/Bachelors-Thesis/.venv/lib/python3.14/site-packages/pm4py/utils.py:992: UserWarning: Install the optional requirement `rustxes` to import/export files faster.\n",
+      "  warnings.warn(\"Install the optional requirement `rustxes` to import/export files faster.\")\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21eb2c6c3606479c97024230d3c5fe42",
+       "model_id": "83dae80ff055419d9190adbe059eb096",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +163,7 @@
          "type": "float"
         }
        ],
-       "ref": "5085ca9e-e12b-416d-95b6-8e610e435248",
+       "ref": "8e9eda72-6eb9-4b18-8949-8d1655b92e7e",
        "rows": [
         [
          "0",
@@ -1482,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "07d6c397",
    "metadata": {},
    "outputs": [],
@@ -1602,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6e8a052c",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1770,7 @@
          "type": "float"
         }
        ],
-       "ref": "d5dd06ef-e4cd-4e82-b35c-2dd5f18996ea",
+       "ref": "e169b134-6731-4dcb-ab87-da1e2f5719cf",
        "rows": [
         [
          "0",
@@ -2157,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d2346fae",
    "metadata": {},
    "outputs": [
@@ -2352,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0018d5d2",
    "metadata": {},
    "outputs": [
@@ -2407,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9057d339",
    "metadata": {},
    "outputs": [
@@ -2546,7 +2555,7 @@
          "type": "integer"
         }
        ],
-       "ref": "84b2797d-da05-4a80-ba32-8836686507ae",
+       "ref": "fb8079b1-c54b-40fd-ab6a-7d5bf6ac0a36",
        "rows": [
         [
          "0",
@@ -2936,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a6f7dfd6",
    "metadata": {},
    "outputs": [
@@ -3025,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0efc4a58",
    "metadata": {},
    "outputs": [
@@ -3076,6 +3085,58 @@
     "plt.axvline(x=0, color='r', linestyle='--')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8926b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Create dataframe for plotting\u001b[39;00m\n\u001b[32m      2\u001b[39m plot_df = pd.DataFrame({\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mActual Time (days)\u001b[39m\u001b[33m'\u001b[39m: \u001b[43my_test\u001b[49m.values,\n\u001b[32m      4\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mPredicted Time (days)\u001b[39m\u001b[33m'\u001b[39m: y_pred\n\u001b[32m      5\u001b[39m })\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Scatter plot with marginal histograms\u001b[39;00m\n\u001b[32m      8\u001b[39m fig = px.scatter(\n\u001b[32m      9\u001b[39m     plot_df, \n\u001b[32m     10\u001b[39m     x=\u001b[33m'\u001b[39m\u001b[33mActual Time (days)\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m   (...)\u001b[39m\u001b[32m     15\u001b[39m     opacity=\u001b[32m0.5\u001b[39m\n\u001b[32m     16\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'y_test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Create dataframe for plotting\n",
+    "plot_df = pd.DataFrame({\n",
+    "    'Actual Time (days)': y_test.values,\n",
+    "    'Predicted Time (days)': y_pred\n",
+    "})\n",
+    "\n",
+    "# Scatter plot with marginal histograms\n",
+    "fig = px.scatter(\n",
+    "    plot_df, \n",
+    "    x='Actual Time (days)', \n",
+    "    y='Predicted Time (days)',\n",
+    "    marginal_x='histogram',  # Distribution of actual values\n",
+    "    marginal_y='histogram',  # Distribution of predicted values\n",
+    "    title='Actual vs Predicted Time to Credit Collection',\n",
+    "    opacity=0.5\n",
+    ")\n",
+    "\n",
+    "# Add perfect prediction line (y = x)\n",
+    "fig.add_shape(\n",
+    "    type='line',\n",
+    "    x0=plot_df['Actual Time (days)'].min(),\n",
+    "    y0=plot_df['Actual Time (days)'].min(),\n",
+    "    x1=plot_df['Actual Time (days)'].max(),\n",
+    "    y1=plot_df['Actual Time (days)'].max(),\n",
+    "    line=dict(color='red', dash='dash', width=2)\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(width=800, height=700)\n",
+    "fig.show()"
    ]
   },
   {
